# lxappearance

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  demo.glade  lxappearance.desktop  lxappearance.desktop.in  lxappearance.glade  lxappearance.gladep  nl.po
data/: Makefile.am  demo.glade  lxappearance.desktop.in  lxappearance.glade  lxappearance.pc.in  lxappearance2.desktop.in
data/ui/: Makefile.am  about.glade.in  about.ui.in  lxappearance.glade  lxappearance.ui
debian/: README.Debian  changelog  control  copyright  files  lxappearance.install  lxappearance.menu  lxappearance.substvars  manpage.1.ex  rules  watch
debian/local/: source_lxappearance.py
man/: Makefile.am  lxappearance.1  lxappearance.sgml  lxappearance.xml
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lg.po  (+36 more)
scripts/: install-icon-theme.sh
src/: Makefile.am  color-scheme.c  color-scheme.h  cursor-theme.c  cursor-theme.h  demo-ui.c  demo-ui.h  demo-ui.patch  demo.c  demo.h  font.c  font.h  glade-support.c  icon-theme.c  icon-theme.h  lxappearance.c  lxappearance.h  lxappearance2.c  lxappearance2.h  main-dlg-ui.c  main-dlg-ui.h  main-dlg.c  main-dlg.h  main.c  other.c  other.h  plugin.c  plugin.h  utils.c  utils.h  widget-theme.c  widget-theme.h  xml-purge.c
